--- a/ItensCadastrados/ItensCadastrados.css
+++ b/ItensCadastrados/ItensCadastrados.css
@@ -1,100 +1,31 @@
+/*ESTILIZAÇÃO DO MENU LATERAL*/
 .MenuLATERAL {
   background-color: #5C7243;
   width: 80%;
   height: 100%;
   color: white;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
 }
 
 .MenuLATERAL .row {
   width: 110%;
+}
+
+.container .row {
+  display: flex;
+  margin-top: 10px;
 
 }
 
-.iconesPagination {
-  font-size: 20px;
+.row {
+  width: 100%;
 }
 
-
-
-@media only screen and (max-width: 460px) {
-  .col-9 {
-    width: 100%;
-
-  }
-
-
-  .table {
-    width: 100%;
-  }
-
-  .containerCard {
-    width: 100%;
-    margin-left: 25px;
-  }
-
-  .MenuSUPERIOR {
-    color: white;
-  }
-
-  #inputGroupSelect01 {
-    width: 80px;
-    background-color: #CDE1B7;
-    border: none;
-    font-size: x-small;
-    height: 30px;
-    text-align: center;
-
-  }
-
-  #inputGroupSelect02 {
-    width: 80px;
-    font-size: x-small;
-    height: 30px;
-    text-align: center;
-  }
-
-  .iconesPagination {
-    font-size: 15px;
-  }
-
-  #frase-impacto {
-    font-size: small;
-    margin-left: 30px;
-    padding-bottom: -20px;
-  }
-
-  #rodape button {
-    font-size: smaller;
-  }
-}
-
+/*ESTILIZAÇAO DO MENU SUPERIOR*/
 .container a {
   color: white;
   text-decoration: none;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-}
-
-
-
-.dropdown-menu,
-.dropdown-item:hover {
-  background-color: #CDE1B7;
-
-}
-
-.mt-3 {
-  border-bottom: 1px solid #dee2e6;
-
-}
-
-.mt-3 a:hover,
-.mt-3:hover,
-.dropdown-item a:hover {
-  color: #97b871;
-
 }
 
 .MenuSUPERIOR {
@@ -123,13 +54,56 @@
   width: 20%;
   position: absolute;
   background-color: #5C7243;
-
 }
 
 .MenuSUPERIOR .navbar {
   width: 40%;
   background-color: #5C7243;
   text-align: center;
+}
+
+.dropdown-menu {
+  width: 13%;
+}
+
+.dropdown-menu,
+.dropdown-item:hover {
+  background-color: #5C7243;
+}
+
+.mt-3 {
+  border-bottom: 1px solid #dee2e6;
+}
+
+.mt-3 a:hover,
+.mt-3:hover,
+.dropdown-item a:hover {
+  color: #97b871;
+
+}
+
+/*ESTILIZAÇÃO DO CARD*/
+
+.containerCard {
+  background-color: #CDE1B7;
+  color: #466F17;
+  border-radius: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+.containerCard input {
+  background-color: #E6E6E6;
+  border: none;
+  border-radius: 10px;
+  word-wrap: break-word;
+}
+
+.container a {
+  color: white;
+  text-decoration: none;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 table th:nth-child(2),
@@ -140,8 +114,6 @@ table td:nth-child(2) {
 table th:nth-child(3),
 table td:nth-child(3) {
   width: 20%;
-
-
 }
 
 table td:nth-child(4),
@@ -153,67 +125,37 @@ table th:nth-child(4) {
   font-size: 20px;
   text-align: center;
   padding-top: 10px;
-
-
 }
 
 .green-icon {
   color: #5C7243;
 }
 
-.container .row {
-  display: flex;
-  margin-top: 10px;
-
-}
-
-.containerCard {
-  background-color: #CDE1B7;
-  color: #466F17;
-  border-radius: 20px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin-bottom: 20px;
-  margin-top: 10px;
-}
-
-
-
-.containerCard input {
-  background-color: #E6E6E6;
-  border: none;
-  border-radius: 10px;
-  word-wrap: break-word;
-}
-
 td input {
   height: 29px;
-  
-
 }
 
-.formMeses {
-  width: 80px;
-  background-color: #CDE1B7;
-  border: none;
-  font-size: small;
-  margin-left: 2%;
+/*paginação*/
+.iconesPagination {
+  font-size: 20px;
 }
 
-.formCadastros {
-  width: 120px;
-  background-color: #CDE1B7;
-  border: none;
-  font-size: small;
-}
+/*filtro de meses*/
+
+/*filtro de categoria*/
 
 .botao-mais-descricao {
   border: none;
   background-color: white;
 }
 
+/*ESTILIZAÇÃO DO RODAPÉ*/
+.footer {
+  bottom: 0;
+}
+
 #rodape {
   background-color: #5C7243;
-
 }
 
 #botao-atendimento {
@@ -227,14 +169,7 @@ td input {
 #frase-impacto {
   color: #FFFFFF;
   border: none;
-}
-
-.row {
-  width: 100%;
-}
-
-.footer {
-  bottom: 0;
+  font-size: large;
 }
 
 .btn-check:checked+.btn,
@@ -248,10 +183,57 @@ td input {
 .btn-secondary:hover {
   background-color: #97b871;
 }
-#teste-botao {
-   word-wrap: break-word;
-   z-index: 1000;
-   width: 50px;
-   position: absolute;
-  
+
+/*FLEX PARA MOBILE*/
+@media only screen and (max-width: 460px) {
+  .col-9 {
+    width: 100%;
+  }
+
+  .table {
+    width: 100%;
+  }
+
+  .containerCard {
+    width: 100%;
+    margin-left: 25px;
+  }
+
+  .MenuSUPERIOR {
+    color: white;
+  }
+
+  #inputGroupSelect01 {
+    width: 80px;
+    background-color: #CDE1B7;
+    border: none;
+    font-size: x-small;
+    height: 30px;
+    text-align: center;
+  }
+
+  #inputGroupSelect02 {
+    width: 80px;
+    font-size: x-small;
+    height: 30px;
+    text-align: center;
+  }
+
+  .iconesPagination {
+    font-size: 15px;
+  }
+
+  #frase-impacto {
+    font-size: small;
+    margin-left: 30px;
+    padding-bottom: -20px;
+  }
+
+  #rodape {
+    margin-top: 350px;
+  }
+
+  #rodape button {
+    font-size: smaller;
+  }
 }
