--- a/TelaCadastro/TelaCadastro.css
+++ b/TelaCadastro/TelaCadastro.css
@@ -4,7 +4,8 @@ header {
   padding: 15px;
 }
 
-header a, header img {
+header a,
+header img {
   margin-left: 25px;
 }
 
@@ -79,7 +80,7 @@ h2 {
   color: #FFFFFF;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: larger;
+  font-size: large;
 }
 
 /* FLEX-BOX PARA CELULAR */
