--- a/TelaLogin/TelaLogin.css
+++ b/TelaLogin/TelaLogin.css
@@ -4,7 +4,8 @@ header {
   padding: 15px;
 }
 
-header a, header img {
+header a,
+header img {
   margin-left: 25px;
 }
 
@@ -104,7 +105,7 @@ a {
   color: #FFFFFF;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: larger;
+  font-size: large;
 }
 
 /* FLEX-BOX PARA O RODAPÉ */
