--- a/PaginaInicial/PaginaInicial.css
+++ b/PaginaInicial/PaginaInicial.css
@@ -205,7 +205,7 @@ svg {
 #frase-impacto {
     color: #FFFFFF;
     text-align: center;
-    font-size: small;
+    font-size: medium;
     margin-left: -150px;
 }
 
