--- a/CadastroItens/Setores.css
+++ b/CadastroItens/Setores.css
@@ -66,7 +66,7 @@ a {
   border-radius: 20px;
   border: none;
   padding: 5px 15px;
-  margin: 30px 0 0 20px;
+  margin: 30px 0 0 0;
 }
 
 #link-itens:hover {
@@ -294,3 +294,6 @@ form input {
     font-size: small;
   }
 }
+.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
+  background-color: #97b871;
+ }
