--- a/PaginaPrincipal/PaginaPrincipal.css
+++ b/PaginaPrincipal/PaginaPrincipal.css
@@ -210,3 +210,6 @@ a {
         font-size: small;
     }
 }
+.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
+    background-color: #97b871;
+   }
