--- a/PaginaPrincipal/PaginaPrincipal.css
+++ b/PaginaPrincipal/PaginaPrincipal.css
@@ -66,7 +66,7 @@ a {
     border-radius: 20px;
     border: none;
     padding: 5px 15px;
-    margin: 50px 0 0 20px;
+    margin: 50px 0 0 0;
 }
 
 #link-itens:hover {
