--- a/TelaLogin/TelaLogin.css
+++ b/TelaLogin/TelaLogin.css
@@ -109,10 +109,16 @@ a {
 }
 
 /* FLEX-BOX PARA O RODAPÉ */
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 460px) {
 
   .container-card-login {
     margin: 110px auto;
+  }
+
+  #rodape {
+    bottom: 0;
+    width: 100%;
+    position: fixed;
   }
 }
 
